src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
}

html,
body {
  overflow-x: hidden;
}

.hover-button:hover .icon path {
  stroke: #00ade9 !important;
}

.hover-button:hover .icon circle {
  stroke: #00ade9 !important;
}

.hover-button:hover .icon line {
  stroke: #00ade9 !important;
}

.hover-button:hover .icon rect {
  stroke: #00ade9 !important;
}

.icon-db:hover path {
  stroke: #006ba3 !important;
}

.icon-db:hover circle {
  stroke: #006ba3 !important;
}

.icon-db:hover line {
  stroke: #006ba3 !important;
}

.icon-db:hover rect {
  stroke: #006ba3 !important;
}

.notification:hover {
  /* Apply the animation styles to the div on hover */
  animation: jumpAnimation 1s 1;
}

@keyframes jumpAnimation {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-5px);
    -webkit-transform: translateY(-5px);
    -moz-transform: translateY(-5px);
    -ms-transform: translateY(-5px);
    -o-transform: translateY(-5px);
  }
  100% {
    transform: translateY(0);
  }
}

/* width */
.categories::-webkit-scrollbar {
  /* width: 5px; */
  height: 5px;
}

/* Track */
.categories::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
.categories::-webkit-scrollbar-thumb {
  background: #00ade9;
  border-radius: 10px;
}

/* Handle on hover */
.categories::-webkit-scrollbar-thumb:hover {
  background: #102558;
}

.text-black-50 {
  color: #1d1d1d;
}

.bg-black-50 {
  background-color: #1d1d1d;
}
.bg-rwhite {
  background-color: #ffffff;
}

.text-blue {
  color: #00ade9;
}

.border-sblue {
  border-color: #00ade9;
}

.bg-blue-20 {
  background-color: #006ba3;
}

.bg-blue {
  background-color: #00ade9;
}

.bg-blue-blend {
  background-color: rgb(0, 173, 233, 0.5);
}
.border-blue {
  border-color: #00ade9;
  color: #00ade9;
}
.border-lblue:focus {
  border: 2px solid #00ade9;
}
.bg-blue-dark {
  background-color: #102558;
}
.w-carousel {
  width: 40rem;
}
.donation-history .owl-item img {
  width: 1rem !important;
}

.donar-scroll {
  height: 300px;
  overflow: auto;
}

.appeal-card {
  height: 230px;
}

.text-blue-dark {
  color: #102558;
}

.bg-green {
  background-color: #00c98b;
}

.text-green {
  color: #00c98b;
}

.text-gray-light {
  color: #7c7c7c;
}

.bg-orange2 {
  background-color: #ffc100;
}

.border-blue:focus {
  border: 2px solid #00ade9;
}
.text-vs {
  font-size: 8px;
}
.bg-gray {
  background-color: #f9f9f9;
}
.border-grey {
  border-color: #f9f9f9;
}
.bg-gray-10 {
  background-color: #f1f1f1;
}
.text-gray-600 {
  color: #444445;
}
.bg-gray-dark {
  background-color: #bdbdbd;
}

.text-gray-300 {
  color: #bdbdbd;
}

a {
  cursor: pointer;
}

.w-sidebar {
  width: 20.13%;
}

.w-appeal {
  width: 35.304%;
}

.w-dashboard {
  width: 64.69%;
}

.table-fix {
  border: none !important;
}

.donation-history-table {
  margin-bottom: 0 !important;
}

.ui.table thead th {
  background-color: white !important;
  color: #bdbdbd !important;
  font-size: 12px !important;
  font-weight: 500;
  text-transform: uppercase;
}

.text-gray {
  color: #999999;
}

.bg-bwhite {
  background-color: #e0f7ff;
}

.text-bwhite {
  color: #e0f7ff;
}

.text-orange {
  color: #fd4949;
}

.border-orange {
  border-color: #fd4949;
}

.loading-background {
  background: url(./images/loader-bg-particles.png) no-repeat !important;
}

.landing-page {
  background: linear-gradient(270deg, #13265500 0%, #132655 100%),
    url(./images/background-image.jpg), 0% 0% no-repeat padding-box;
  opacity: 1;
  background-size: cover;
  background-repeat: no-repeat;
}

.bg-unicef {
  background: linear-gradient(180deg, #7c7c7c00 0%, #000000 100%),
    url(./images/©-UNICEF_UNI235471_Willocq-1@2x.png) 0% 0% no-repeat
      padding-box;
  box-shadow: 0px 5px 20px #00000008;
  border-radius: 16px;
  background-size: cover;
  opacity: 1;
}

.group15343 {
  background-image: url(./images/Group\ 15343.svg);
  background-size: contain;
  background-repeat: no-repeat;
}

.border-lblack {
  border-color: #1d1d1d;
}

.border-l2black {
  border-color: #444445;
}

.bg-gray-mate {
  background-color: #999999;
}

.text-gray {
  color: #999999;
}

.-bottom-12 {
  bottom: -3.5rem;
}

.owl-nav {
  display: none !important;
}

.appeal-section-carousel .owl-dots {
  display: block !important;
}

.owl-theme .owl-dots .owl-dot span {
  width: 30px !important; /* Change this value to the desired width */
  height: 10px !important; /* Optionally, change the height too */
}

.owl-theme.owl-dots.owl-dot.active span {
  background: #00ade9 !important; /* Change the background color for the active dot */
}
.owl-carousel-1 .owl-stage-outer {
  height: 710px;
}

.owl-carousel-1 .owl-dots {
  display: block !important;
}

.achievements-carousel .owl-dots {
  margin-top: 30px !important;
  display: block !important;
}

.events-carousel .owl-dots {
  margin-top: 40px !important;
  display: block !important;
}

.text-nblue {
  color: #102558;
}

.bg-yellow {
  background-color: #ffc100;
}

.border-fyellow {
  border-color: #ffc100;
}

.text-fyellow {
  color: #ffc100;
}

.bg-owhite {
  background-color: #f9f9f9;
}

.border-owhite {
  border-color: #e6e6e6;
}

.bg-o2white {
  background-color: #e6e6e6;
}

.text-sblue {
  color: #00ade9;
}

.bg-sblue {
  background-color: #00ade9;
}

.text-dblue {
  color: #006ba3;
}

.bg-dblue {
  background-color: #006ba3;
}

.bg-pink {
  background-color: #ffb1b1;
}

.text-purple {
  color: #a349fd;
}

.absolute-center {
  right: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.border-nblue {
  border-color: #102558;
}

.bg-nblue {
  background-color: #102558;
}

.bg-union {
  background-image: url(./images/Union\ 7.png);
}

.text-gray {
  color: #bdbdbd;
}

.border-lgray {
  border-color: #bdbdbd;
}

.bg-lgray {
  background-color: #bdbdbd;
}

.bg-platinum {
  background-color: #e6e6e6;
}

.text-lgray {
  color: #bdbdbd;
}

.bg-red {
  background-color: #fd4949;
}

.text-l2gray {
  color: #f5f6f7;
}

.bg-l2gray {
  background-color: #f5f6f7;
}

.text-dgray {
  color: #7c7c7c;
}

.border-green {
  border-color: #00c98b;
}

.text-footer {
  color: #8892ac;
}

.w-popup {
  width: 644px;
  top: 20px;
  left: 32%;
}

hr.solid {
  border-top: 3px solid #e2e2e2;
}

.text-l3gray {
  color: #e2e2e2;
}

ul {
  list-style-type: disc;
}

.ellipse {
  left: 20%;
  bottom: -10%;
}

.top-8 {
  top: 10%;
}

.bg-orange {
  background-color: #ffeaea;
}

.text-l3black {
  color: #181818;
}

.bg-lgreen {
  background-color: #b4ffe8;
}
ul {
  list-style: none;
}
ul.terms li::before {
  content: '\2022';
  color: #00ade9;
  font-weight: bold;
  display: inline-block;
  width: 1em;
  margin-left: -1em;
}
input[type='radio'] {
  -webkit-appearance: none;
  width: 20px;
  height: 20px;
  border: 1px solid darkgray;
  border-radius: 50%;
  outline: none;
  /* box-shadow:0 0 5px 0px gray inset; */
}
input[type='radio']:before {
  content: '';
  display: block;
  width: 6px; /* updated */
  height: 6px; /* updated */
  margin: 30% auto;
  border-radius: 50%;
  background: rgb(223, 223, 223);
}
input[type='radio']:checked:before {
  background: #1d1d1d;
}
input[type='radio']:checked {
  border: 2px solid #1d1d1d;
}
.z-9 {
  z-index: 9;
}
.border-bottom-white {
  border-bottom: 4px solid white;
}
.mt-18 {
  margin-top: 4.5rem;
}
.mt-46 {
  margin-top: 4.6rem;
}
.modal .dimmer {
  z-index: 30;
}
.modal .messageBox {
  z-index: 30;
}

@media only screen and (max-width: 990px) {
  .w-sidebar {
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
  }
  .w-carousel {
    width: 18rem;
  }
  .w-appeal {
    width: 100%;
  }

  .w-dashboard {
    width: 100%;
  }

  .landing-page {
    background: linear-gradient(270deg, #13265500 0%, #132655 100%),
      url(./images/background-image-mobile.png), 0% 0% no-repeat padding-box;
    opacity: 1;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: top;
  }

  .group15343 {
    background-image: none;
  }
  .owl-carousel-1 .owl-stage-outer {
    height: 610px;
  }
  .bg-rwhite {
    background-color: #f9f9f9;
  }
}

.label-image {
  width: 160px;
}

.marker-image {
  height: 25px;
  width: 20px;
}

.gm-style-iw-c {
  padding: 0px !important;
}

.gm-style-iw-d {
  overflow: hidden !important;
}

.gm-ui-hover-effect {
  top: -1px !important;
  right: -1px !important;
  &:hover {
    color: #00ade9 !important;
    border: 1px solid #00ade9 !important;
    border-radius: 50% !important;
    -webkit-border-radius: 50% !important;
    -moz-border-radius: 50% !important;
    -ms-border-radius: 50% !important;
    -o-border-radius: 50% !important;
  }
}
.map-div {
  width: 400px;
  max-width: 400px;
}

@media screen and (max-width: 768px) {
  .map-img {
    display: none;
  }
  .map-div {
    max-width: 250px;
    width: 250px;
  }
}

